# editor-dojo

./: Cargo.toml  INTEGRITY.md  LICENSE  README.md  TEST_REPORT.md  build.rs  test_integration.sh  test_progress.rs
.github/workflows/: release.yml
challenges/helix/: 01-delete-word.toml  02-line-end.toml  03-find-replace.toml  04-word-forward.toml  05-word-backward.toml  06-word-end.toml  07-line-start.toml  08-first-non-blank.toml  09-insert-line-start.toml  10-append-line-end.toml  11-goto-line.toml  12-find-char.toml  13-find-char-backward.toml  14-till-char.toml  15-repeat-find.toml  16-insert-before.toml  17-append-after.toml  18-open-below.toml  19-open-above.toml  20-delete-char.toml  21-delete-line.toml  22-delete-to-line-end.toml  23-delete-word.toml  24-change-word.toml  25-change-line.toml  26-change-to-line-end.toml  27-replace-char.toml  28-yank-word.toml  29-yank-line.toml  30-paste-before.toml  31-paste-after.toml  32-inner-word.toml  33-around-word.toml  34-inner-quotes.toml  35-inner-parens.toml  36-around-parens.toml  37-inner-braces.toml  38-around-braces.toml  39-visual-select.toml  40-visual-line.toml  (+10 more)
src/: lib.rs  main.rs
src/application/: achievement_checker.rs  challenge_runner.rs  mod.rs  progress_repository.rs  progress_tracker.rs  validator.rs
src/domain/: achievement.rs  challenge.rs  challenge_stats.rs  key_sequence.rs  mastery_tier.rs  mod.rs  progress.rs  recording.rs  solution.rs
src/infrastructure/: cast_parser.rs  challenge_loader.rs  crypto.rs  editor.rs  filesystem.rs  mod.rs  (+3 more)
tests/: integration_test.rs  integrity_test.rs
(+6 files in other folders)
